--- a/src/components/MetaDataPage.astro
+++ b/src/components/MetaDataPage.astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = false;
 import Code from "./CodeBlock.astro";
 import Layout from "../layouts/Layout.astro";
 import { getInfoPages } from "../utils/fetchData";
