fix: Hybrid output astro

--- a/src/components/MetaDataPage.astro
+++ b/src/components/MetaDataPage.astro
@@ -22,7 +22,7 @@ try {
 const { icons, og, twitter, title, description, ...data } = jsonFetch as any;
 ---
 
-<Layout title="Extract">
+<Layout title="MetaScrapt Extract metadata">
   <nav
     class="flex justify-between items-center px-4 md:px-16 lg:px-32 py-2 border-b bg-white"
   >
