fix: preact integration client visible

--- a/src/components/TwitterSection.astro
+++ b/src/components/TwitterSection.astro
@@ -1,6 +1,6 @@
 ---
 // @ts-nocheck
-import Article from "./Article.astro";
+import Article from "./AR";
 import CodeBlock from "./CodeBlock.astro";
 const { twitter } = Astro.props;
 const data = {} as any;
