--- a/src/components/MetaDataPage.astro
+++ b/src/components/MetaDataPage.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import { getInfoPages } from "../utils/fetchData";
+import AR from "./AR";
+import CodeBlock from "./CodeBlock.astro";
 import IconsGalery from "./IconsGalery";
 import LinkNav from "./LinkNav.astro";
 import OpenGraph from "./OpenGraph";
@@ -124,20 +126,20 @@ const { icons, og, twitter, title, description, ...data } = jsonFetch as any;
     </aside>
     <section class="flex-1 md:pr-4 py-4 lg:py-8 space-y-8 lg:max-w-prose">
       {og && <OpenGraph og={og} client:load />}
-      {icons && <IconsGalery icons={icons} />}
+      {icons && <IconsGalery icons={icons} client:visible />}
       {twitter && <TwitterSection twitter={twitter} />}
-      <!-- {
+      {
         Object.getOwnPropertyNames(data).map((meta) => (
-          <Article
+          <AR
+            client:visible
             id={data[meta].name}
             title={data[meta]?.name?.replaceAll("-", " ")}
             tag={data[meta].tag}
           >
-            <Code meta={data[meta]} />
-          </Article>
+            <CodeBlock meta={data[meta]} />
+          </AR>
         ))
-      } -->
+      }
     </section>
   </main>
 </Layout>
-./IconsGalery.jsx
