fix: preact integration client visible

--- a/src/components/MetaDataPage.astro
+++ b/src/components/MetaDataPage.astro
@@ -1,4 +1,6 @@
 ---
+// @ts-nocheck
+
 import Layout from "../layouts/Layout.astro";
 import { getInfoPages } from "../utils/fetchData";
 import AR from "./AR";
