--- a/src/components/MetaDataPage.astro
+++ b/src/components/MetaDataPage.astro
@@ -1,10 +1,7 @@
 ---
 // @ts-nocheck
-
 import Layout from "../layouts/Layout.astro";
 import { getInfoPages } from "../utils/fetchData";
-import AR from "./AR";
-import CodeBlock from "./CodeBlock.astro";
 import IconsGalery from "./IconsGalery";
 import LinkNav from "./LinkNav.astro";
 import OpenGraph from "./OpenGraph";
@@ -13,16 +10,10 @@ import TwitterSection from "./TwitterSection.astro";
 const { url } = Astro;
 const urlQuery = url.searchParams.get("url");
 const urlFetch = new URL(urlQuery);
-let jsonFetch = {};
 
-try {
-  const fetch = await getInfoPages(urlQuery);
-  jsonFetch = { ...fetch };
-} catch (error) {
-  console.log(error);
-  return error;
-}
-const { icons, og, twitter, title, description, ...data } = jsonFetch as any;
+const fetch = await getInfoPages(urlQuery);
+
+const { icons, og, twitter, title, description, ...data } = fetch as any;
 ---
 
 <Layout title="MetaScrapt Extract metadata">
