--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,13 +44,13 @@ const { title } = Astro.props;
 	@tailwind base;
 	@tailwind components;
 	@tailwind utilities;
-	.code_block::-webkit-scrollbar {
+	span::-webkit-scrollbar {
 		height: 6px;
 	}
-	.code_block::-webkit-scrollbar-track {
+	span::-webkit-scrollbar-track {
 		background: transparent; /* color of the tracking area */
 	}
-	.code_block::-webkit-scrollbar-thumb {
+	span::-webkit-scrollbar-thumb {
 		background-color: transparent; /* color of the scroll thumb */
 		border-radius: 20px; /* roundness of the scroll thumb */
 		border: 3px solid rgba(255, 255, 255, 0.3); /* creates padding around scroll thumb */
